<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smartphoneappdev.wcd.connecfourt.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutOwner"
        android:layout_marginBottom="@dimen/layout_margin_vert"
        android:gravity="center">

        <ImageButton
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:clickable="false"
            android:focusable="false"
            android:id="@+id/game_logo"
            android:background="@drawable/fort_logo"
            />

        <TextView
            style="@style/LabelStyle"
            android:textSize="@dimen/hdr_text_sizes"
            android:layout_marginTop="@dimen/layout_margin_vert"
            android:text="@string/company"
            android:id="@+id/company"/>
        <TextView
            style="@style/LabelStyle"
            android:textSize="@dimen/hdr_text_sizes"
            android:text="@string/author_name"
            android:id="@+id/author"/>
        <TextView
            style="@style/LabelStyle"
            android:textSize="@dimen/hdr_text_sizes"
            android:text="@string/uni_num"
            android:id="@+id/uniNum"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout1"
        android:layout_marginTop="@dimen/layout_margin_vert"
        android:layout_marginBottom="@dimen/layout_margin_vert"
        android:layout_below="@+id/layoutOwner"
        android:gravity="center">

        <TextView
            style="@style/LabelStyle"
            android:layout_marginEnd="@dimen/label_margin_end"
            android:text=""
            android:gravity="top"
            android:layout_weight="1"
            android:id="@+id/player1"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/spinner1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout2"
        android:layout_marginTop="@dimen/layout_margin_vert"
        android:layout_marginBottom="@dimen/layout_margin_vert"
        android:layout_below="@+id/layout1"
        android:gravity="center">

        <TextView
            style="@style/LabelStyle"
            android:layout_marginEnd="@dimen/label_margin_end"
            android:text=""
            android:gravity="top"
            android:layout_weight="1"
            android:id="@+id/player2"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/spinner2"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutStart"
        android:layout_marginTop="@dimen/layout_margin_vert"
        android:layout_marginBottom="@dimen/layout_margin_vert"
        android:layout_below="@+id/layout2"
        android:gravity="center">

        <TextView
            style="@style/LabelStyle"
            android:layout_marginEnd="@dimen/label_margin_end"
            android:text="@string/starts"
            android:gravity="top"
            android:layout_weight="1"
            android:id="@+id/playerStart"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            style="@style/SpinnerStyle"
            android:id="@+id/spinnerStart"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutButton"
        android:layout_marginTop="@dimen/layout_margin_vert"
        android:layout_marginBottom="@dimen/layout_margin_vert"
        android:layout_below="@+id/layoutStart"
        android:gravity="center">

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/new_game"
        android:background="@drawable/fort_icon"
        android:text="@string/new_game"/>

    </LinearLayout>


</RelativeLayout>
